--- a/views/layouts/edit.handlebars
+++ b/views/layouts/edit.handlebars
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="/js/expTrackFunctions.js"></script>
   <script src="/js/expTrackEditMode.js"></script>
+  <script>
+    window.onload = function(evt) {
+      window.location.hash = "bottom";
+    }
+  </script>
   <link rel="stylesheet" href="/css/expTrackEditMode.css">
   <title>Expense Tracker</title>
 </head>
