--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -73,7 +73,7 @@
       <div class='row' id={{join 'trans_' id}}>
         <div class='colDate'>{{date}}</div>
         <div class='colTrans'>
-          <form method='get' action={{editUrlWithId ../priAcc id}}>
+          <form method='get' action={{join '/edit/' id}}>
             <input type='hidden' name='edit_priacc' value={{../priAcc}} />
             <button type='submit'>
               {{join 'Edit ' (fourDigit id)}}
