--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -2,7 +2,7 @@
 {{!-- EDIT MODE --}}
 {{!-- # Msg area --}}
 {{#if error}}
-<div class='error' id='msg'>{{msg}}</div>
+<div class='error' id='msg'>{{error}}</div>
 {{else}}
 <div class='info' id='msg'>{{msg}}</div>
 {{/if}}
@@ -12,12 +12,12 @@
     {{!-- # put link back to starting page --}}
     <div class='colhead'><a href='/enter'>Back to main page</a></div>
     {{!-- # Reload page link --}}
-    <div class='colhead'><a href={{priAccUrl}}>Reload this page</a></div>
+    <div class='colhead'><a href={{editAccUrl}}>Reload this page</a></div>
     <div class='colcell'><a name='top' href='#bottom'>To Bottom</a></div>
   </div>
   <div class='row'> 
     <div class='title colhead'>Edit Mode</div>
-    <div class='title colhead'>{{priAcc}}</div>
+    <div class='title colhead'>{{editAcc}}</div>
     <div class='colcell'></div>
   </div>
   {{!-- # Emtpty row to create space between heading and table below --}}
@@ -38,7 +38,7 @@
         <div class='colDate'>
           <input type='text' name='date' value={{date}} size='10'
             onblur='validateDate(this, document.getElementById("msg"))' />
-          <input type='hidden' name='edit_priacc' value={{../priAcc}} />
+          <input type='hidden' name='edit_priacc' value={{../editAcc}} />
         </div>
         <div class='colTrans'>
           <input type='hidden' name='trans_num' value={{id}} />
@@ -56,7 +56,7 @@
           <input type='text' name='note' value='{{note}}' size='99%'
             onblur='validateNote(this, document.getElementById("msg"))'  /><br />
           <div class='colshared'>Move to:
-            <select name='dstacc'>{{> accListOpts aList=../accList default=../priAcc }}</select>
+            <select name='dstacc'>{{> accListOpts aList=../accList default=../editAcc }}</select>
           </div>&nbsp;&nbsp;&nbsp;&nbsp;
           <div class='colshared colgo'>
             <input type='radio' name='op' value='update' checked='checked' />
@@ -74,7 +74,7 @@
         <div class='colDate'>{{date}}</div>
         <div class='colTrans'>
           <form method='get' action={{join '/edit/' id}}>
-            <input type='hidden' name='edit_priacc' value={{../priAcc}} />
+            <input type='hidden' name='edit_priacc' value={{../editAcc}} />
             <button type='submit'>
               {{join 'Edit ' (fourDigit id)}}
             </button>
@@ -92,28 +92,28 @@
   <form method='post' action='/edit' id='trans_add' class='row'
     onsubmit='return validateAddTransaction(this)'>
     <div class='colDate'>
-      <input name='date' value={{todaysDate}} size=10
+      <input name='date' value={{lastTransaction.date}} size=10
         onBlur='validateDate(this, document.getElementById("msg"))'>
     </div>
     <div class='colTrans'>
       <input type='hidden' name='op' value='add'>
-      <input type='hidden' name='edit_priacc' value={{priAcc}}>
+      <input type='hidden' name='edit_priacc' value={{editAcc}}>
     </div>
     <div class='colGrp'>
       <select name='grp' id='grp'
         onBlur='validateAccGrp(this, document.getElementById("msg"))'>
-        {{> accGrpListOpts agList=accGrpList default='--' }}
+        {{> accGrpListOpts agList=accGrpList default=lastTransaction.accGrp }}
       </select>
     </div>
     <div class='colAmt'>
-      <input name='amt' size=9, 
+      <input name='amt' size=9 value='{{toDollars lastTransaction.amt}}'
         onBlur='validateAmt(this, document.getElementById("msg"))'>
     </div>
     <div class='colBal'>
       <input type='submit' name='submit_add_trans' id='submit_add_trans' value='Add'>
     </div>
     <div class='colNote'>
-      <input name='note' size='99%'
+      <input name='note' size='99%' value='{{lastTransaction.note}}'
         onBlur='validateNote(this, document.getElementById("msg"))'>
     </div>
   </form>
